// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridAreaPopover snapshots should render GridAreaPopover 1`] = `
<DocumentFragment>
  <div
    class="css-6wln18 Popover Popover--light"
    data-test-box=""
    data-test-popover="popover"
    style="height: 180px; width: 210px; left: -12.5px; top: -48.5px;"
  >
    <div
      class="css-1jnxvbp GridInputs GridInputs GridInputs--light"
      data-test-grid-inputs=""
    >
      <div
        class="css-1jnxvbp TextField TextField--light"
        data-test-text-field="columns"
        data-test-tooltip=""
      >
        <div
          class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
          data-test-text-field-wrapper=""
        >
          <div
            class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
            data-test-box=""
            data-test-scrubbable-input="columns"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="columns"
              height="12"
              name="Columns"
              width="12"
            />
          </div>
          <input
            class="TextFieldWrapper__input TextFieldWrapper__input--light"
            data-test-text-field-input="columns"
            maxlength="6"
            type="text"
            value="1"
          />
        </div>
      </div>
      <div
        class="Tooltip Tooltip--light"
      >
        <div
          class="Tooltip__content Tooltip__content--light"
        >
          Number of columns
          <div
            class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="carrot-down"
            height="14"
            name="CarrotDown"
            width="10"
          />
        </div>
      </div>
      <small
        class="css-1jnxvbp GridInputs__separator GridInputs__separator--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        x
      </small>
      <div
        class="css-1jnxvbp TextField TextField--light"
        data-test-text-field="rows"
        data-test-tooltip=""
      >
        <div
          class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
          data-test-text-field-wrapper=""
        >
          <div
            class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
            data-test-box=""
            data-test-scrubbable-input="rows"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="rows"
              height="12"
              name="Rows"
              width="12"
            />
          </div>
          <input
            class="TextFieldWrapper__input TextFieldWrapper__input--light"
            data-test-text-field-input="rows"
            maxlength="6"
            type="text"
            value="1"
          />
        </div>
      </div>
      <div
        class="Tooltip Tooltip--light"
      >
        <div
          class="Tooltip__content Tooltip__content--light"
        >
          Number of rows
          <div
            class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="carrot-down"
            height="14"
            name="CarrotDown"
            width="10"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GridAreaPopover snapshots should render with opened popover 1`] = `
<DocumentFragment>
  <div
    class="css-6wln18 Popover Popover--light Popover--selected Popover--selected--light"
    data-test-box=""
    data-test-popover="popover"
    style="height: 180px; width: 210px; left: -12.5px; top: -48.5px;"
  >
    <div
      class="css-1jnxvbp GridInputs GridInputs GridInputs--light"
      data-test-grid-inputs=""
    >
      <div
        class="css-1jnxvbp TextField TextField--light"
        data-test-text-field="columns"
        data-test-tooltip=""
      >
        <div
          class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
          data-test-text-field-wrapper=""
        >
          <div
            class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
            data-test-box=""
            data-test-scrubbable-input="columns"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="columns"
              height="12"
              name="Columns"
              width="12"
            />
          </div>
          <input
            class="TextFieldWrapper__input TextFieldWrapper__input--light"
            data-test-text-field-input="columns"
            maxlength="6"
            type="text"
            value="1"
          />
        </div>
      </div>
      <div
        class="Tooltip Tooltip--light"
      >
        <div
          class="Tooltip__content Tooltip__content--light"
        >
          Number of columns
          <div
            class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="carrot-down"
            height="14"
            name="CarrotDown"
            width="10"
          />
        </div>
      </div>
      <small
        class="css-1jnxvbp GridInputs__separator GridInputs__separator--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        x
      </small>
      <div
        class="css-1jnxvbp TextField TextField--light"
        data-test-text-field="rows"
        data-test-tooltip=""
      >
        <div
          class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
          data-test-text-field-wrapper=""
        >
          <div
            class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
            data-test-box=""
            data-test-scrubbable-input="rows"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="rows"
              height="12"
              name="Rows"
              width="12"
            />
          </div>
          <input
            class="TextFieldWrapper__input TextFieldWrapper__input--light"
            data-test-text-field-input="rows"
            maxlength="6"
            type="text"
            value="1"
          />
        </div>
      </div>
      <div
        class="Tooltip Tooltip--light"
      >
        <div
          class="Tooltip__content Tooltip__content--light"
        >
          Number of rows
          <div
            class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="carrot-down"
            height="14"
            name="CarrotDown"
            width="10"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
